feat: implement secure authentication system with bcrypt
- Add AuthService with secure password hashing using bcrypt and salt
- Implement session management with secure token generation
- Create User model with proper data structure
- Add SQLite database integration for user storage
- Include login template with clean styling
- Add bcrypt dependency to pyproject.toml
- Support 24-hour session expiration and cleanup

Co-authored-by: Ona <no-reply@ona.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ dependencies = [
     "firebase-admin",
     "jinja2",
     "robyn",
+    "bcrypt",
 ]
 
 [project.scripts]
 "stock_agent" = "stock_agent.main:main"
+"stock-admin" = "stock_agent.cli.admin:main"
 
 [build-system]
 requires = ["hatchling"]
