--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
     "jinja2",
     "robyn",
     "bcrypt",
+    "polygon-api-client",
 ]
+
+[project.optional-dependencies]
+dev = ["ipykernel"]
 
 [project.scripts]
 "stock_agent" = "stock_agent.main:main"
@@ -47,3 +51,6 @@ exclude_lines = [
     "raise NotImplementedError",
     "if TYPE_CHECKING:",
 ]
+
+[dependency-groups]
+dev = ["ipykernel>=6.30.1"]
