--- a/.devcontainer/local/devcontainer.json
+++ b/.devcontainer/local/devcontainer.json
@@ -3,7 +3,7 @@
 //
 // See https://aka.ms/devcontainer.json for more information.
 {
-  "name": "Gitpod",
+  "name": "Local",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
   "forwardPorts": [8080]
 }
