--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Stock Agent Environment Variables
-# Copy this file to .env and fill in your actual values
+# Firebase Authentication Configuration
 
 # =============================================================================
 # API KEYS (Required)
@@ -15,16 +15,16 @@ POLYGON_API_KEY=your_polygon_api_key_here
 
 # Firebase project configuration
 # Get from: Firebase Console > Project Settings > General
-FIREBASE_API_KEY=your_firebase_api_key
-FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+FIREBASE_API_KEY=AIzaSyDemoKey123456789
+FIREBASE_AUTH_DOMAIN=stock-agent-demo.firebaseapp.com
+FIREBASE_PROJECT_ID=stock-agent-demo
+FIREBASE_STORAGE_BUCKET=stock-agent-demo.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=123456789012
 FIREBASE_APP_ID=1:123456789012:web:abcdef123456789
 
 # Firebase Cloud Messaging VAPID key
 # Get from: Firebase Console > Project Settings > Cloud Messaging > Web Push certificates
-FIREBASE_VAPID_PUBLIC_KEY=your_vapid_public_key_here
+FIREBASE_VAPID_PUBLIC_KEY=BDemoVapidKey123456789
 
 # =============================================================================
 # SERVER CONFIGURATION
@@ -38,11 +38,11 @@ PORT=8080
 # DATABASE CONFIGURATION
 # =============================================================================
 
-# Database file location (inside container)
-DATABASE_PATH=/app/data/users.db
+# Database file location
+DATABASE_PATH=users.db
 
 # Data directory
-DATA_DIR=/app/data
+DATA_DIR=./data
 
 # =============================================================================
 # FIREBASE CREDENTIALS (Production)
@@ -50,7 +50,7 @@ DATA_DIR=/app/data
 
 # For production, set one of these:
 # 1. Path to Firebase service account credentials JSON file
-# FIREBASE_CREDS_PATH=/app/firebase_creds.json
+# FIREBASE_CREDS_PATH=/path/to/service-account.json
 
 # 2. OR Firebase service account JSON as environment variable
 # FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account","project_id":"..."}
@@ -66,7 +66,7 @@ DATA_DIR=/app/data
 LOG_LEVEL=INFO
 
 # Development flags (set to false for production)
-DEBUG=false
+DEBUG=true
 
 # =============================================================================
 # DEVELOPMENT OVERRIDES (Optional)
